[gd_scene load_steps=5 format=3 uid="uid://ynxhpflixwav"]

[ext_resource type="Script" uid="uid://cjumovlj551th" path="res://prefabs/ui/hud/hud.gd" id="1_dsf3i"]
[ext_resource type="PackedScene" uid="uid://b4qq6ossnjq0c" path="res://prefabs/ui/lives/lives_ui.tscn" id="2_3f6uq"]
[ext_resource type="PackedScene" uid="uid://bafghw5sjkie1" path="res://prefabs/ui/fish_count/fish_count.tscn" id="3_f7va4"]
[ext_resource type="PackedScene" uid="uid://bhhtuwihhbr1t" path="res://prefabs/ui/score/total_score.tscn" id="4_16ybw"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_dsf3i")

[node name="FishCount" parent="." instance=ExtResource("3_f7va4")]
unique_name_in_owner = true
visible = false

[node name="LivesUI" parent="." instance=ExtResource("2_3f6uq")]
unique_name_in_owner = true
visible = false

[node name="TotalScore" parent="." instance=ExtResource("4_16ybw")]
unique_name_in_owner = true
visible = false
